--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,46 +8,41 @@
   tools:context=".MainActivity">
   <Button
     android:id="@+id/button_toast"
-    android:layout_width="0dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="8dp"
+    android:background="@color/colorPrimary"
+    android:onClick="showToast"
+    android:text="@string/button_label_toast"
+    android:textColor="@android:color/white"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
+  <Button
+    android:id="@+id/button_count"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="524dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
     android:background="@color/colorPrimary"
-    android:text="@string/button_label_toast"
-    android:textColor="@android:color/white"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    android:onClick="showToast"/>
-  <Button
-    android:id="@+id/button_count"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginStart="8dp"
-    android:background="@color/colorPrimary"
+    android:onClick="countUp"
     android:text="@string/button_label_count"
     android:textColor="@android:color/white"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    android:onClick="countUp"/>
+    app:layout_constraintTop_toBottomOf="@+id/button_toast"
+    app:layout_constraintStart_toStartOf="parent"/>
   <TextView
     android:id="@+id/show_count"
     android:textStyle="bold"
-    android:layout_width="0dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
     android:background="#FFFF00"
     android:text="@string/count_initial_value"
     android:textAlignment="center"
     android:textColor="@color/colorPrimary"
     android:textSize="160sp"
-    app:layout_constraintBottom_toTopOf="@+id/button_count"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/button_toast"/>
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toEndOf="@+id/button_toast"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
