--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -8,7 +8,7 @@
   tools:context=".MainActivity">
   <Button
     android:id="@+id/button_count"
-    android:layout_width="449dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
     android:onClick="countUp"
@@ -21,7 +21,7 @@
     app:layout_constraintStart_toStartOf="parent"/>
   <Button
     android:id="@+id/button_toast"
-    android:layout_width="448dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
     android:onClick="showToast"
