--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.appcompat.widget.LinearLayoutCompat
+<RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
@@ -24,6 +24,9 @@
     android:id="@+id/show_count"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_below="@id/button_toast"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentLeft="true"
     android:layout_marginBottom="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
@@ -31,7 +34,6 @@
     android:background="#FFFF00"
     android:gravity="center_vertical"
     android:textAlignment="center"
-    android:layout_weight="1"
     android:text="@string/count_initial_value"
     android:textColor="@color/colorPrimary"
     android:textSize="160sp"
@@ -42,6 +44,8 @@
     android:id="@+id/button_count"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_below="@id/show_count"
+    android:layout_centerHorizontal="true"
     android:layout_marginBottom="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
@@ -51,4 +55,4 @@
     android:textColor="@android:color/white" />
 
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+</RelativeLayout>
